shortened training time

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -9,6 +9,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "# import pickle\n",
+    "# pickle.HIGHEST_PROTOCOL = 4\n",
     "import pandas as pd\n",
     "import os\n",
     "from sklearn.model_selection import train_test_split"
@@ -91,8 +93,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "past_df = ratings_df.groupby('user_id').apply(lambda x: np.array_split(x.sort_values('timestamp'), 2)[0].reset_index(drop=True))\n",
-    "future_df = ratings_df.groupby('user_id').apply(lambda x: np.array_split(x.sort_values('timestamp'), 2)[1].reset_index(drop=True))"
+    "past_df = ratings_df.groupby('user_id').apply(lambda x: np.array_split(x.sort_values('timestamp'), 2)[0].reset_index(drop=True)).rename_axis((None, None))\n",
+    "future_df = ratings_df.groupby('user_id').apply(lambda x: np.array_split(x.sort_values('timestamp'), 2)[1].reset_index(drop=True)).rename_axis((None, None))"
    ]
   },
   {
@@ -131,9 +133,12 @@
    "outputs": [],
    "source": [
     "store = pd.HDFStore(os.path.join(save_dir,'users_train_dfs.h5'), 'w')\n",
-    "store['users'] = users_train_df\n",
-    "store['users_history'] = past_train_df\n",
-    "store['samples_future'] = future_train_df\n",
+    "# store['users'] = users_train_df\n",
+    "# store['users_history'] = past_train_df\n",
+    "# store['samples_future'] = future_train_df\n",
+    "store.put('users', users_train_df, format='table')\n",
+    "store.put('users_history', past_train_df, format='table')\n",
+    "store.put('samples_future', future_train_df, format='table')\n",
     "store.close()\n"
    ]
   },
@@ -145,16 +150,22 @@
    "source": [
     "\n",
     "\n",
-    "store = pd.HDFStore(os.path.join(save_dir,'users_val_dfs.h5'))\n",
-    "store['users'] = users_val_df\n",
-    "store['users_history'] = past_val_df\n",
-    "store['samples_future'] = future_val_df\n",
+    "store = pd.HDFStore(os.path.join(save_dir,'users_val_dfs.h5'), 'w')\n",
+    "# store['users'] = users_val_df\n",
+    "# store['users_history'] = past_val_df\n",
+    "# store['samples_future'] = future_val_df\n",
+    "store.put('users', users_val_df, format='table')\n",
+    "store.put('users_history', past_val_df, format='table')\n",
+    "store.put('samples_future', future_val_df, format='table')\n",
     "store.close()\n",
     "\n",
-    "store = pd.HDFStore(os.path.join(save_dir,'users_test_dfs.h5'))\n",
-    "store['users'] = users_test_df\n",
-    "store['users_history'] = past_test_df\n",
-    "store['samples_future'] = future_test_df\n",
+    "store = pd.HDFStore(os.path.join(save_dir,'users_test_dfs.h5'), 'w')\n",
+    "# store['users'] = users_test_df\n",
+    "# store['users_history'] = past_test_df\n",
+    "# store['samples_future'] = future_test_df\n",
+    "store.put('users', users_test_df, format='table')\n",
+    "store.put('users_history', past_test_df, format='table')\n",
+    "store.put('samples_future', future_test_df, format='table')\n",
     "store.close()"
    ]
   },
@@ -164,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "movies_df.to_hdf(os.path.join(save_dir,'movies_dfs.h5'), key='movies', mode='w')"
+    "movies_df.to_hdf(os.path.join(save_dir,'movies_dfs.h5'), key='movies', mode='w', format='table')"
    ]
   },
   {
@@ -198,14 +209,6 @@
        "      <th>movie_id</th>\n",
        "      <th>rating</th>\n",
        "      <th>timestamp</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>user_id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -295,19 +298,18 @@
        "</div>"
       ],
       "text/plain": [
-       "            user_id  movie_id  rating  timestamp\n",
-       "user_id                                         \n",
-       "4036    0      4036      2028       5  965507074\n",
-       "        1      4036      3210       4  965507074\n",
-       "        2      4036      1258       5  965507106\n",
-       "        3      4036      3105       3  965507106\n",
-       "        4      4036      1431       3  965507106\n",
-       "...             ...       ...     ...        ...\n",
-       "456     74      456       750       4  976300620\n",
-       "        75      456       151       3  976300620\n",
-       "        76      456      2067       3  976300620\n",
-       "        77      456      1263       2  976300620\n",
-       "        78      456      1208       2  976300620\n",
+       "         user_id  movie_id  rating  timestamp\n",
+       "4036 0      4036      2028       5  965507074\n",
+       "     1      4036      3210       4  965507074\n",
+       "     2      4036      1258       5  965507106\n",
+       "     3      4036      3105       3  965507106\n",
+       "     4      4036      1431       3  965507106\n",
+       "...          ...       ...     ...        ...\n",
+       "456  74      456       750       4  976300620\n",
+       "     75      456       151       3  976300620\n",
+       "     76      456      2067       3  976300620\n",
+       "     77      456      1263       2  976300620\n",
+       "     78      456      1208       2  976300620\n",
        "\n",
        "[410290 rows x 4 columns]"
       ]
@@ -323,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +338,7 @@
        "Name: 494, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +461,7 @@
        "[3883 rows x 2 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +481,7 @@
        "(4950, 2792, 4, 966097923)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +501,7 @@
        "{'user_id': 4950, 'movie_id': 2792, 'rating': 4, 'timestamp': 966097923}"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -645,13 +647,13 @@
        "[4832 rows x 2 columns]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "users_history = users_history.droplevel('user_id')\n",
+    "users_history = users_history.droplevel(0)\n",
     "max_seq_len = users_history.groupby('user_id').count().max().max()\n",
     "users_history = users_history.groupby('user_id').apply(lambda x: x.sort_values('timestamp'))\n",
     "users_history = users_history.drop('timestamp', axis=1)\n",
