--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {
     "id": "Sq8uv4c9S3-A"
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,6 +117,34 @@
     "past_train_df = past_df.loc[users_train_df.index]\n",
     "past_val_df = past_df.loc[users_val_df.index]\n",
     "past_test_df = past_df.loc[users_test_df.index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    410290.000000\n",
+       "mean          3.660803\n",
+       "std           1.111214\n",
+       "min           1.000000\n",
+       "25%           3.000000\n",
+       "50%           4.000000\n",
+       "75%           5.000000\n",
+       "max           5.000000\n",
+       "Name: rating, dtype: float64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "past_train_df.rating.describe()"
    ]
   },
   {
@@ -177,498 +205,6 @@
    "source": [
     "movies_df.to_hdf(os.path.join(save_dir,'movies_dfs.h5'), key='movies', mode='w', format='table')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>movie_id</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>timestamp</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">4036</th>\n",
-       "      <th>0</th>\n",
-       "      <td>4036</td>\n",
-       "      <td>2028</td>\n",
-       "      <td>5</td>\n",
-       "      <td>965507074</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4036</td>\n",
-       "      <td>3210</td>\n",
-       "      <td>4</td>\n",
-       "      <td>965507074</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4036</td>\n",
-       "      <td>1258</td>\n",
-       "      <td>5</td>\n",
-       "      <td>965507106</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4036</td>\n",
-       "      <td>3105</td>\n",
-       "      <td>3</td>\n",
-       "      <td>965507106</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4036</td>\n",
-       "      <td>1431</td>\n",
-       "      <td>3</td>\n",
-       "      <td>965507106</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">456</th>\n",
-       "      <th>74</th>\n",
-       "      <td>456</td>\n",
-       "      <td>750</td>\n",
-       "      <td>4</td>\n",
-       "      <td>976300620</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75</th>\n",
-       "      <td>456</td>\n",
-       "      <td>151</td>\n",
-       "      <td>3</td>\n",
-       "      <td>976300620</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>76</th>\n",
-       "      <td>456</td>\n",
-       "      <td>2067</td>\n",
-       "      <td>3</td>\n",
-       "      <td>976300620</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>77</th>\n",
-       "      <td>456</td>\n",
-       "      <td>1263</td>\n",
-       "      <td>2</td>\n",
-       "      <td>976300620</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>78</th>\n",
-       "      <td>456</td>\n",
-       "      <td>1208</td>\n",
-       "      <td>2</td>\n",
-       "      <td>976300620</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>410290 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         user_id  movie_id  rating  timestamp\n",
-       "4036 0      4036      2028       5  965507074\n",
-       "     1      4036      3210       4  965507074\n",
-       "     2      4036      1258       5  965507106\n",
-       "     3      4036      3105       3  965507106\n",
-       "     4      4036      1431       3  965507106\n",
-       "...          ...       ...     ...        ...\n",
-       "456  74      456       750       4  976300620\n",
-       "     75      456       151       3  976300620\n",
-       "     76      456      2067       3  976300620\n",
-       "     77      456      1263       2  976300620\n",
-       "     78      456      1208       2  976300620\n",
-       "\n",
-       "[410290 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.read_hdf(os.path.join(save_dir,'users_train_dfs.h5'), key='users_history')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "gender            F\n",
-       "age              35\n",
-       "occupation        0\n",
-       "zip_code      17870\n",
-       "Name: 494, dtype: object"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.read_hdf(os.path.join(save_dir,'users_train_dfs.h5'), key='users').iloc[234]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>genres</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>movie_id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Toy Story (1995)</td>\n",
-       "      <td>Animation|Children's|Comedy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Jumanji (1995)</td>\n",
-       "      <td>Adventure|Children's|Fantasy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Grumpier Old Men (1995)</td>\n",
-       "      <td>Comedy|Romance</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Waiting to Exhale (1995)</td>\n",
-       "      <td>Comedy|Drama</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Father of the Bride Part II (1995)</td>\n",
-       "      <td>Comedy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3948</th>\n",
-       "      <td>Meet the Parents (2000)</td>\n",
-       "      <td>Comedy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3949</th>\n",
-       "      <td>Requiem for a Dream (2000)</td>\n",
-       "      <td>Drama</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3950</th>\n",
-       "      <td>Tigerland (2000)</td>\n",
-       "      <td>Drama</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3951</th>\n",
-       "      <td>Two Family House (2000)</td>\n",
-       "      <td>Drama</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3952</th>\n",
-       "      <td>Contender, The (2000)</td>\n",
-       "      <td>Drama|Thriller</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3883 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                       title                        genres\n",
-       "movie_id                                                                  \n",
-       "1                           Toy Story (1995)   Animation|Children's|Comedy\n",
-       "2                             Jumanji (1995)  Adventure|Children's|Fantasy\n",
-       "3                    Grumpier Old Men (1995)                Comedy|Romance\n",
-       "4                   Waiting to Exhale (1995)                  Comedy|Drama\n",
-       "5         Father of the Bride Part II (1995)                        Comedy\n",
-       "...                                      ...                           ...\n",
-       "3948                 Meet the Parents (2000)                        Comedy\n",
-       "3949              Requiem for a Dream (2000)                         Drama\n",
-       "3950                        Tigerland (2000)                         Drama\n",
-       "3951                 Two Family House (2000)                         Drama\n",
-       "3952                   Contender, The (2000)                Drama|Thriller\n",
-       "\n",
-       "[3883 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.read_hdf(os.path.join(save_dir,'movies_dfs.h5'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(4950, 2792, 4, 966097923)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tuple(pd.read_hdf(os.path.join(save_dir,'users_train_dfs.h5'), key='samples_future').iloc[234])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'user_id': 4950, 'movie_id': 2792, 'rating': 4, 'timestamp': 966097923}"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.read_hdf(os.path.join(save_dir,'users_train_dfs.h5'), key='samples_future').iloc[234].to_dict()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "users_history = pd.read_hdf(os.path.join(save_dir,'users_train_dfs.h5'), key='users_history')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>movie_id</th>\n",
-       "      <th>rating</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>user_id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6034</th>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6035</th>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6037</th>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6039</th>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6040</th>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4832 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                  movie_id  \\\n",
-       "user_id                                                      \n",
-       "1        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "2        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "4        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "6        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "7        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "...                                                    ...   \n",
-       "6034     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "6035     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "6037     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "6039     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "6040     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "\n",
-       "                                                    rating  \n",
-       "user_id                                                     \n",
-       "1        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "2        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "4        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "6        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "7        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "...                                                    ...  \n",
-       "6034     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "6035     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "6037     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "6039     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "6040     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "\n",
-       "[4832 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "users_history = users_history.droplevel(0)\n",
-    "max_seq_len = users_history.groupby('user_id').count().max().max()\n",
-    "users_history = users_history.groupby('user_id').apply(lambda x: x.sort_values('timestamp'))\n",
-    "users_history = users_history.drop('timestamp', axis=1)\n",
-    "users_history = users_history.droplevel('user_id')\n",
-    "users_history = users_history.groupby('user_id').agg(lambda x: x.tolist())\n",
-    "users_history = users_history.applymap(np.asarray, dtype=int)#.iloc[:,0]\n",
-    "users_history.applymap(lambda x: np.pad(x, (max_seq_len - len(x), 0), 'constant', constant_values=(0,0)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
