Add the user and movie branches.

--- a/mLSTM_movielens.ipynb
+++ b/mLSTM_movielens.ipynb
@@ -52,12 +52,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "raw",
    "metadata": {
     "id": "z7LqqL_8rrHJ"
    },
-   "outputs": [],
    "source": [
     "# class ZeroEmbedding(nn.Embedding):\n",
     "#     \"\"\"\n",
@@ -96,11 +99,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "id": "BDgV-CJ6UGiF"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The history saving thread hit an unexpected error (OperationalError('no such table: history')).History will not be written to the database.\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'nn' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-a49b68382999>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mPADDING_IDX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mmLSTMNet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mModule\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \"\"\"\n\u001b[1;32m      4\u001b[0m     \u001b[0mModule\u001b[0m \u001b[0mrepresenting\u001b[0m \u001b[0musers\u001b[0m \u001b[0mthrough\u001b[0m \u001b[0mrunning\u001b[0m \u001b[0ma\u001b[0m \u001b[0mrecurrent\u001b[0m \u001b[0mneural\u001b[0m \u001b[0mnetwork\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mover\u001b[0m \u001b[0mthe\u001b[0m \u001b[0msequence\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0musing\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mhidden\u001b[0m \u001b[0mstate\u001b[0m \u001b[0mat\u001b[0m \u001b[0meach\u001b[0m \u001b[0mtimestep\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mthe\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'nn' is not defined"
+     ]
+    }
+   ],
    "source": [
     "PADDING_IDX = 0\n",
     "class mLSTMNet(nn.Module):\n",
@@ -137,6 +159,33 @@
     "                                                padding_idx=PADDING_IDX,\n",
     "                                                sparse=sparse)\n",
     "\n",
+    "        self.mbranch = nn.Sequential(\n",
+    "            nn.Linear(embedding_dim, embedding_dim * 2),\n",
+    "            nn.ReLU(embedding_dim * 2),\n",
+    "            nn.Dropout(0.5),\n",
+    "#             nn.BatchNorm1d(embedding_dim * 2, momentum=0.99),\n",
+    "            nn.Linear(embedding_dim * 2, embedding_dim * 2),\n",
+    "            nn.ReLU(embedding_dim * 2),\n",
+    "            nn.Dropout(0.5),\n",
+    "#             nn.BatchNorm1d(embedding_dim * 2, momentum=0.99),\n",
+    "            nn.Linear(embedding_dim * 2, embedding_dim),\n",
+    "        )\n",
+    "        \n",
+    "        ubranch_dim = 21 + 1 + 2 \n",
+    "        self.ubranch = nn.Sequential(\n",
+    "            nn.Linear(ubranch_dim, ubranch_dim * 2),\n",
+    "            nn.ReLU(ubranch_dim * 2),\n",
+    "            nn.Dropout(0.5),\n",
+    "#             nn.BatchNorm1d(ubranch_dim * 2, momentum=0.99),\n",
+    "            nn.Linear(ubranch_dim * 2, ubranch_dim * 2),\n",
+    "            nn.ReLU(ubranch_dim * 2),\n",
+    "            nn.Dropout(0.5),\n",
+    "#             nn.BatchNorm1d(ubranch_dim * 2, momentum=0.99),\n",
+    "            nn.Linear(ubranch_dim * 2, ubranch_dim),\n",
+    "        )\n",
+    "        \n",
+    "\n",
+    "        \n",
     "        # self.item_biases = ZeroEmbedding(num_items, 1, sparse=sparse,\n",
     "        #                                  padding_idx=PADDING_IDX)\n",
     "\n",
@@ -152,7 +201,7 @@
     "        self.rating  = nn.Sequential(\n",
     "            nn.Dropout(0.5),\n",
     "\n",
-    "            nn.Linear(embedding_dim*2+1, embedding_dim),\n",
+    "            nn.Linear(embedding_dim*2+1+ubranch_dim, embedding_dim),\n",
     "            # nn.BatchNorm1d(1024, momentum=0.99),\n",
     "            nn.ReLU(embedding_dim),\n",
     "\n",
@@ -173,7 +222,7 @@
     "        #     if len(p.size()) >= 2:\n",
     "        #         torch.nn.init.xavier_uniform_(p)\n",
     "\n",
-    "    def forward(self, item_sequences, ratings_sequences, movies):\n",
+    "    def forward(self, item_sequences, ratings_sequences, movies, mname, mgenre, usex, uage, uoccupation):\n",
     "        \"\"\"\n",
     "        Compute user representation from a given sequence.\n",
     "        Returns\n",
@@ -185,6 +234,10 @@
     "            at step t (all items seen). This final state can be used\n",
     "            for prediction or evaluation.\n",
     "        \"\"\"\n",
+    "        movie_embedding = (self.item_embeddings(torch.unsqueeze(movies, 0)).squeeze(0))\n",
+    "        user_emb = self.ubranch(torch.cat((usex, uage, uoccupation), dim=1))\n",
+    "        mov_emb = self.mbranch(movie_embedding)\n",
+    "\n",
     "        # Make the embedding dimension the channel dimension\n",
     "        sequence_embeddings = self.item_embeddings(item_sequences)\n",
     "\n",
@@ -204,11 +257,9 @@
     "        ## user_representations[:, :, -1] is your user history representation (lstm output - )\n",
     "        ## make modifications after this point\n",
     "        ###################################################################################\n",
-    "        movie_embedding = (self.item_embeddings(torch.unsqueeze(movies, 0))\n",
-    "                            .squeeze(0))\n",
     "\n",
     "        # print(movie_embedding.shape, user_representations.shape)\n",
-    "        x = torch.cat([movie_embedding, user_representations[:, :, -1]], dim=1)\n",
+    "        x = torch.cat([user_representations[:, :, -1], user_emb, mov_emb], dim=1)\n",
     "\n",
     "        return self.rating(x).squeeze(1)\n"
    ]
@@ -568,12 +619,18 @@
     "        movie_id = sample['movie_id'].to(device)\n",
     "        rating = sample['rating'].to(device)\n",
     "        \n",
+    "        mname = sample['movie_info']['title'].to(device)\n",
+    "        mgenre = sample['movie_info']['genres'].to(device)\n",
+    "        usex = sample['user_info']['gender'].to(device)\n",
+    "        uage = sample['user_info']['age'].to(device)\n",
+    "        uoccupation = sample['user_info']['occupation'].to(device)\n",
+    "\n",
     "        # with torch.cuda.amp.autocast():\n",
     "        #     pred = model(user_history_movie_id, movie_id)\n",
     "\n",
     "        #     loss = criterion(pred, rating.to(torch.float16))\n",
     "\n",
-    "        pred = model(user_history_movie_id, user_history_rating, movie_id)\n",
+    "        pred = model(user_history_movie_id, user_history_rating, movie_id, mname, mgenre, usex, uage, uoccupation)\n",
     "\n",
     "        loss = criterion(pred, rating.to(torch.float32))\n",
     "        loss_running.append(loss.item())\n",
@@ -852,7 +909,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8",
    "language": "python",
    "name": "python3"
   },
@@ -866,7 +923,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.11"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
